@@ -2,4 +2,5 @@ Zach Barth - Creator :)
 Rick Gibbed - Code
 Metroid48 - Code
 TheApathetic - Code
+Xeio87 - Code
 Wideshanks - Artwork (New splash screen)
